Add essential development files and configuration
- ESLint and Prettier configuration
- Documentation (CONTRIBUTING, SETUP, S3_INTEGRATION, etc.)
- Development scripts (font management, database setup, etc.)
- Docker Compose for local development
- VS Code workspace configuration
- Exclude development database files (Prisma handles production DB)

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,14 @@ test_duration/
 .vscode/
 .claude/
 
+# Development files (not needed for production)
+db/
+build.log
+build2.log
+fonts_backup/
+public/uploads/
+test-ffmpeg-syntax.js
+
 # Font files now handled by Git LFS (GitHub Pro)
 !public/fonts/system-fonts.json
 !src/app/utils/fonts.ts
