--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "FONTCONFIG_PATH=./fonts prisma db push && concurrently --names \"NEXT,PRISMA\" --prefix-colors \"blue,green\" \"CANVAS_FONT_PATH=./fonts next dev\" \"npm run db:studio\"",
     "dev:next": "FONTCONFIG_PATH=./fonts CANVAS_FONT_PATH=./fonts prisma db push && next dev",
     "build": "prisma generate && FONTCONFIG_PATH=./fonts CANVAS_FONT_PATH=./fonts next build",
+    "build:railway": "npm ci --legacy-peer-deps && prisma generate && FONTCONFIG_PATH=./fonts CANVAS_FONT_PATH=./fonts next build",
     "start": "FONTCONFIG_PATH=./fonts CANVAS_FONT_PATH=./fonts next start",
     "build:production": "prisma generate && prisma db push && FONTCONFIG_PATH=./fonts CANVAS_FONT_PATH=./fonts next build",
     "lint": "next lint",
