--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,10 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+# package managers - exclude npm lockfile, keep pnpm lockfile
+package-lock.json
+# pnpm-lock.yaml should be tracked
+
 # Large files and directories (excluded for GitHub)
 renders/*
 public/animations/*
@@ -52,6 +56,7 @@ test-ffmpeg-syntax.js
 # Font files now handled by Git LFS (GitHub Pro)
 !public/fonts/system-fonts.json
 !src/app/utils/fonts.ts
+!pnpm-lock.yaml
 
 # Video and image files (too large for GitHub)
 *.mp4
