--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/node": "^20.10.1",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
+    "@types/uuid": "^9.0.7",
     "@uploadthing/react": "^6.0.2",
     "autoprefixer": "^10.4.16",
     "axios": "^1.8.4",
@@ -95,8 +96,9 @@
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2",
-    "uploadthing": "^6.0.3",
-    "zod": "^3.24.3"
+    "uploadthing": "^6.13.3",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
