--- a/package.json
+++ b/package.json
@@ -111,5 +111,9 @@
       "sharp",
       "unrs-resolver"
     ]
+  },
+  "devDependencies": {
+    "@types/node-fetch": "^2.6.12",
+    "@types/pg": "^8.15.4"
   }
 }
