--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
     "@trpc/next": "^10.43.0",
     "@trpc/react-query": "^10.43.0",
     "@trpc/server": "^10.43.0",
-    "@types/fluent-ffmpeg": "^2.1.24",
     "@types/node": "^20.10.1",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
@@ -73,6 +72,7 @@
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.2",
     "fontkit": "^2.0.4",
+    "form-data": "^4.0.3",
     "framer-motion": "^12.18.1",
     "html2canvas": "^1.4.1",
     "langchain": "^0.3.22",
@@ -112,6 +112,7 @@
     ]
   },
   "devDependencies": {
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/pg": "^8.15.4"
   }
 }
