feat: implement user authentication with Clerk and add save status indicator

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/auth/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/auth/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/dashboard
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/dashboard
+CLERK_WEBHOOK_SECRET=
 
 # Upload
 UPLOADTHING_SECRET=
