--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@langchain/openai": "^0.5.5",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-collapsible": "^1.1.8",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -36,6 +37,7 @@
     "@radix-ui/react-hover-card": "^1.1.11",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.6",
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.4",
@@ -86,6 +88,7 @@
     "react-moveable": "^0.54.2",
     "sharp": "^0.34.1",
     "superjson": "^2.2.1",
+    "svix": "^1.67.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7",
