--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "@trpc/next": "^10.43.0",
     "@trpc/react-query": "^10.43.0",
     "@trpc/server": "^10.43.0",
+    "@types/archiver": "^6.0.3",
     "@uploadthing/react": "^6.0.2",
+    "archiver": "^7.0.1",
     "autoprefixer": "^10.4.16",
     "axios": "^1.8.4",
     "canvas": "^3.1.0",
