feat: add Google Fonts API key configuration and improve font handling

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,7 @@ FAL_KEY=
 # S3 Storage (Wasabi)
 WASABI_ACCESS_KEY=
 WASABI_SECRET_ACCESS_KEY=
+
+# Font Configuration
+NEXT_PUBLIC_USE_GOOGLE_FONTS=true
+NEXT_PUBLIC_GOOGLE_FONTS_API_KEY=your_google_fonts_api_key_here
