--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.8",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -38,8 +39,9 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-scroll-area": "^1.2.6",
-    "@radix-ui/react-select": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slider": "^1.2.4",
     "@radix-ui/react-slot": "^1.0.2",
@@ -55,6 +57,7 @@
     "@trpc/react-query": "^10.43.0",
     "@trpc/server": "^10.43.0",
     "@types/archiver": "^6.0.3",
+    "@types/jszip": "^3.4.1",
     "@uploadthing/react": "^6.0.2",
     "archiver": "^7.0.1",
     "autoprefixer": "^10.4.16",
@@ -64,6 +67,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^0.2.0",
     "concurrently": "^9.1.2",
+    "csv-parser": "^3.2.0",
     "date-fns": "^2.30.0",
     "eslint": "^8.54.0",
     "eslint-config-next": "14.2.25",
@@ -74,7 +78,9 @@
     "fontkit": "^2.0.4",
     "form-data": "^4.0.3",
     "framer-motion": "^12.18.1",
+    "googleapis": "^152.0.0",
     "html2canvas": "^1.4.1",
+    "jszip": "^3.10.1",
     "langchain": "^0.3.22",
     "lucide-react": "^0.294.0",
     "next": "14.2.25",
@@ -98,6 +104,7 @@
     "typescript": "^5.3.2",
     "uploadthing": "^6.13.3",
     "uuid": "^9.0.1",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   },
   "pnpm": {
